<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >


    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.safsaf.justjava.MainActivity"
        android:background="#fffffb"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:id="@+id/name_field"
            android:hint="@string/hint_name"
            android:inputType="textCapWords"
            android:textSize="30sp"
            android:textColor="#000000"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/topping_name"
            android:textSize="35sp"
            android:textColor="#000000"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/whipped_name"
            android:textSize="25sp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:id="@+id/whippedCream"
            tools:ignore="RtlSymmetry" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/chocolate_name"
            android:textSize="25sp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:id="@+id/chocolate"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/quantity_name"
            android:textSize="40sp"
            android:textColor="#000000"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="48dp"
                android:text="@string/decrement_name"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textSize="20sp"
                android:textColor="#000000"
                android:layout_marginTop="16dp"
                android:onClick="decrement"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/quantity_text_view"
            android:text="@string/text_name"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:textSize="20sp"
            android:textColor="#000000"
            />
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="48dp"
                android:text="@string/increment"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textSize="20sp"
                android:textColor="#000000"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:onClick="increment"
                tools:ignore="RtlHardcoded" />


        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/price_name"
            android:textSize="30sp"
            android:textColor="#000000"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:id="@+id/price_text_view"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/moneny_name"
            android:textSize="25sp"
            android:textColor="#000000"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/order_name"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:textSize="30sp"
            android:textColor="#000000"
            android:layout_marginTop="16dp"
            android:onClick="submitOrder"/>

    </LinearLayout>
    </ScrollView>